--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
@@ -111,6 +111,24 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.mniez.myapplication.StudentModule.MainActivity" />
+        </activity>
+        <activity
+            android:name=".TeacherModule.TestActivity"
+            android:label="@string/title_activity_test_exam"
+            android:parentActivityName=".TeacherModule.CourseElementsActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.mniez.myapplication.StudentModule.CourseElementsActivity" />
+        </activity>
+        <activity
+            android:name=".TeacherModule.ExamActivity"
+            android:label="@string/title_activity_test_exam"
+            android:parentActivityName=".TeacherModule.CourseElementsActivity"
+            android:screenOrientation="portrait">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.mniez.myapplication.StudentModule.CourseElementsActivity" />
         </activity>
         <provider
             android:name="android.support.v4.content.FileProvider"
